src/aux-server/aux-web/aux-player/InventoryFile/InventoryFile.css
.inventory-file {
    padding: 5px;
    border-bottom: 1px solid transparent;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 15px;
    display: flex;
    flex: 1 1 0;
}

.inventory-file:hover {
    cursor: pointer;
}

.inventory-file.active {
    border-bottom: 5px solid lightslategray;
}

.inventory-file-cube {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
}

.inventory-file-cube .inventory-file-text {
    width: 100%;
    height: 32px;
    line-height: 16px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(255,255,255,0.5);
    border-radius: 0.75em;
}

.inventory-file-cube .inventory-file-img {
    background-color: transparent;
    max-height: 60%;
    display: flex;
    margin-top: auto;
    align-self: center;
}

